<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/speedLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/speedunit"
            android:gravity="bottom"
            android:hint="@string/speedhint"
            android:inputType="numberDecimal"
            android:singleLine="true" />

        <Spinner
            android:id="@+id/speedunit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:entries="@array/speed" />
        
        
	</RelativeLayout>
	
    <RelativeLayout
        android:id="@+id/sizeLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/sizeunit"
            android:gravity="bottom"
            android:hint="@string/sizehint"
            android:inputType="numberDecimal"
            android:singleLine="true" />

        <Spinner
            android:id="@+id/sizeunit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:entries="@array/size" />
        
	</RelativeLayout>

    <RelativeLayout
        android:id="@+id/timeLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/timeunit"
            android:gravity="bottom"
            android:hint="@string/timehint"
            android:inputType="numberDecimal"
            android:singleLine="true" />

        <Spinner
            android:id="@+id/timeunit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:entries="@array/time" />
        
	</RelativeLayout>
    
</LinearLayout>